[gd_scene load_steps=21 format=3 uid="uid://b60o2b02idul1"]

[ext_resource type="Script" path="res://src/character/code/character.gd" id="1_yfqqq"]
[ext_resource type="Texture2D" uid="uid://o14fxcdhmocq" path="res://src/character/assets/emoji_empty.png" id="2_3hc2u"]
[ext_resource type="Texture2D" uid="uid://bj2hp47ubmsho" path="res://src/character/assets/astronaut.png" id="3_d6qkw"]
[ext_resource type="Theme" uid="uid://bxc85rre337gj" path="res://src/global/theme/emojiTheme.tres" id="4_lw4o1"]
[ext_resource type="Script" path="res://src/character/code/characterEmoji.gd" id="5_uad1d"]
[ext_resource type="AudioStream" uid="uid://c1wukexhp3m3h" path="res://src/sounds/fusion.mp3" id="6_ufgdk"]
[ext_resource type="AudioStream" uid="uid://bieeanwcu88si" path="res://src/sounds/success.mp3" id="7_si5io"]
[ext_resource type="AudioStream" uid="uid://cg1h62ao0m2t6" path="res://src/sounds/fail.mp3" id="8_mdedn"]
[ext_resource type="Texture2D" uid="uid://diyfrquvvcfxu" path="res://src/particles/bubble_1_grayscale.png" id="9_vvcxb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nrv1l"]
radius = 230.0
height = 813.333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r1kv1"]
radius = 310.0
height = 893.333

[sub_resource type="Curve" id="Curve_tebki"]
_data = [Vector2(0.0208333, 0.835165), 0.0, 0.0, 0, 0, Vector2(0.76, 0.582418), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xv4tv"]
curve = SubResource("Curve_tebki")

[sub_resource type="Gradient" id="Gradient_6jfg6"]
offsets = PackedFloat32Array(0, 0.795082, 0.991803)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lkra5"]
gradient = SubResource("Gradient_6jfg6")

[sub_resource type="Curve" id="Curve_doxep"]
_data = [Vector2(0, 0.296703), 0.0, 0.0, 0, 0, Vector2(0.958333, 0.78022), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_03thc"]
curve = SubResource("Curve_doxep")

[sub_resource type="Curve" id="Curve_y4xft"]
max_value = 3.0
_data = [Vector2(0, 3), 0.0, 0.0, 0, 0, Vector2(0.98, 1.51648), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8u8qi"]
curve = SubResource("Curve_y4xft")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y7oc5"]
particle_flag_disable_z = true
angle_min = -20.3
angle_max = 60.8
angular_velocity_min = -159.03
angular_velocity_max = 3.22998
orbit_velocity_min = -0.702
orbit_velocity_max = -0.308
radial_velocity_min = -197.18
radial_velocity_max = 535.22
gravity = Vector3(0, 50, 0)
scale_min = 0.9
scale_max = 1.2
scale_curve = SubResource("CurveTexture_03thc")
scale_over_velocity_min = 0.4
scale_over_velocity_max = 141.25
scale_over_velocity_curve = SubResource("CurveTexture_8u8qi")
color_ramp = SubResource("GradientTexture1D_lkra5")
alpha_curve = SubResource("CurveTexture_xv4tv")
hue_variation_min = -0.28
hue_variation_max = 0.23

[node name="CharacterBody" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
motion_mode = 1
script = ExtResource("1_yfqqq")

[node name="EmojiBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_3hc2u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_d6qkw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16.6667, -23.3333)
shape = SubResource("CapsuleShape2D_nrv1l")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(23.3334, -46.6667)
shape = SubResource("CapsuleShape2D_r1kv1")

[node name="CombineTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -263.333
offset_top = -806.667
offset_right = 325.667
offset_bottom = -602.667

[node name="EmojiPlaceholder" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -480.0
offset_right = 290.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("4_lw4o1")
theme_override_font_sizes/font_size = 260
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_uad1d")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="CombineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ufgdk")
volume_db = -12.0

[node name="SuccessSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_si5io")
volume_db = -2.0

[node name="FailSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_mdedn")
volume_db = -2.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 9
process_material = SubResource("ParticleProcessMaterial_y7oc5")
texture = ExtResource("9_vvcxb")
speed_scale = 1.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="CombineTimer" to="." method="_on_combine_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
